# AgentForge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
examples/01_hello_world/: agents.yaml  run.py
examples/02_research_writer/: agents.yaml  run.py
examples/03_code_reviewer/: agents.yaml  run.py
examples/04_customer_support/: run.py
examples/05_parallel_research/: agents.yaml  run.py
examples/06_human_approval/: agents.yaml  run.py
src/agentforge/: __init__.py
src/agentforge/cli/: __init__.py  commands.py
src/agentforge/config/: __init__.py  defaults.py  loader.py  schema.py
src/agentforge/control/: __init__.py  approval.py  confidence.py  dry_run.py  guardrails.py  retry.py
src/agentforge/core/: __init__.py  agent.py  forge.py  result.py  step.py  team.py  workflow.py
src/agentforge/dashboard/: __init__.py  app.py  routes.py  ws.py
src/agentforge/dashboard/static/: app.js  index.html  style.css
src/agentforge/llm/: __init__.py  provider.py  router.py
src/agentforge/memory/: __init__.py  base.py  long_term.py  shared.py  short_term.py
src/agentforge/observe/: __init__.py  cost_report.py  events.py  export.py  tracer.py
src/agentforge/templates/: customer_support.yaml  research_writer.yaml
src/agentforge/tools/: __init__.py  base.py  mcp_loader.py  registry.py
tests/: conftest.py
tests/test_cli/: test_commands.py
tests/test_config/: test_defaults.py  test_loader.py  test_schema.py
tests/test_control/: test_advanced.py  test_approval.py  test_confidence.py  test_dry_run.py
tests/test_core/: test_agent.py  test_forge.py  test_step.py  test_workflow.py  test_workflow_advanced.py
tests/test_llm/: test_provider.py  test_router.py
tests/test_memory/: test_long_term.py  test_shared.py  test_short_term.py
tests/test_observe/: test_tracer.py
tests/test_tools/: test_base.py  test_builtin.py  test_security.py
(+6 files in other folders)
