[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentforge"
dynamic = ["version"]
description = "YAML-first multi-agent orchestration framework for Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AgentForge Contributors" },
]
keywords = ["agents", "llm", "orchestration", "multi-agent", "ai", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=6.0.0",
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
agentforge = "agentforge.cli.commands:app"

[project.urls]
Homepage = "https://github.com/whoisaum/agentforge"
Documentation = "https://github.com/whoisaum/agentforge#readme"
Repository = "https://github.com/whoisaum/agentforge"
Issues = "https://github.com/whoisaum/agentforge/issues"

[tool.hatch.version]
path = "src/agentforge/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agentforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120
